--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,24 +1,24 @@
 .cont {
     display: flex;
     align-items: center;
-    gap: 500px;
+    justify-content: left;
+    /* gap: 500px; */
     background-color: #056897;
+    height: 100px;
 }
+.titulo {
+    font-family: 'Dancing Script', cursive;
+    font-size: 36px;
+    color: #333;
+}
+
 
 .img {
-    margin-right: 20px;
-    transform: translateY(-10px);
+   
+transform: translateY(-5px);
 }
-
-.textos {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 5px;
-}
-
-.txt {
-    font-family: Arial, Helvetica, sans-serif;
+.principal{
+    height: 100px;
 }
 
 .texto {
