--- a/css/geral.css
+++ b/css/geral.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
 body {
-    background-color: #063664;
+    background-color: #063664 !important;
     margin: 0;
-        background-image: url(../imagens/grafismo_pag_login.svg);
-        background-position: center;
-        background-position-y: -20%;
-        background-repeat: no-repeat;
+    background-image: url(../imagens/grafismo_pag_login.svg);
+    background-position: center;
+    background-position-y: -20%;
+    background-repeat: no-repeat;
 
-        /* width: 648px; */
-        /* height: 612px; */
-        /* position: absolute; */
-        /* left: calc(50% - 390px); */
-        /* max-width: 100%; */
+    /* width: 648px; */
+    /* height: 612px; */
+    /* position: absolute; */
+    /* left: calc(50% - 390px); */
+    /* max-width: 100%; */
 }
 
 .botao {
@@ -91,7 +91,7 @@ body {
     font-weight: 900;
 }
 
-.textos{
+.textos {
     width: 65%;
     display: flex;
     flex-direction: row;
@@ -99,32 +99,49 @@ body {
     align-items: center;
 }
 
-.pesquisa{
+.pesquisa {
     position: relative;
 }
+
 .sugestoes {
-    max-height: 100px; /* Altura ajustada */
+    max-height: 100px;
+    /* Altura ajustada */
     overflow-y: auto;
-    background: rgba(255, 255, 255, 1); /* Fundo transparente */
+    background: rgba(255, 255, 255, 1);
+    /* Fundo transparente */
     position: absolute;
-    width: 100%; /* Largura menor para não ocupar toda a tela */
-    z-index: 1000; /* Garante que as sugestões fiquem acima de outros elementos */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
-    border-radius: 5px; /* Bordas arredondadas */
-    font-size: 16px; /* Menor tamanho da fonte */
+    width: 100%;
+    /* Largura menor para não ocupar toda a tela */
+    z-index: 1000;
+    /* Garante que as sugestões fiquem acima de outros elementos */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* Sombra suave */
+    border-radius: 5px;
+    /* Bordas arredondadas */
+    font-size: 16px;
+    /* Menor tamanho da fonte */
     border: 1px solid #eeeeee;
 }
 
 .sugestoes div {
-    padding: 5px 10px; /* Menor padding */
+    padding: 5px 10px;
+    /* Menor padding */
     cursor: pointer;
     border-bottom: 1px solid #dddddd;
 }
+
 .sugestoes div:last-child {
     border-bottom: 0;
 }
 
 
 .sugestoes div:hover {
-    background-color: #f0f0f0; /* Cor de fundo ao passar o mouse */
+    background-color: #f0f0f0;
+    /* Cor de fundo ao passar o mouse */
+}
+
+@media print {
+    .cont {
+        display: none;
+    }
 }
