--- a/admin/css/geral.css
+++ b/admin/css/geral.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 400px;
+    width: 60%;
     color: #ffffff;
     
 }
